test/types/string/dmk/substring/substringBadRange2-codepoint.good
substringBadRange2-codepoint.chpl:3: error: halt reached - range out of bounds of string
