test/types/string/dmk/substring/substringBadRange2-codepoint.chpl
var str = "åbçdèfghíjklm";

writeln("str[13:codePointIndex..(-1):codePointIndex] = ", str[13:codePointIndex..(-1):codePointIndex]);
